<resources>
    <string name="app_name">CBASS Monitor</string>
    <string name="devices">Bluetooth LE Devices</string>
    <string name="device_style">Devices Selection</string>
    <string name="update_rate">Data Update Rate</string>
    <string name="maximum_history">Maximum Stored History</string>
    <string name="displayed_history">Maximum Graphed History</string>
    <string name="connect_prefs">CBASS Connections</string>
    <string name="PIN_title">CBASS PIN</string>

    <string name="location_permission_title">Location permission required</string>
    <string name="location_permission_message">This app does not use location information, but scanning for Bluetooth LE devices requires this permission</string>

    <string name="location_denied_title">Location permission denied</string>
    <string name="location_denied_message">As location permission has not been granted, this app cannot scan for Bluetooth LE devices.</string>
    <string name="scan_denied_title">Scanning permission denied</string>
    <string name="scan_denied_message">As BLE scan permission has not been granted, this app cannot scan for Bluetooth LE devices.</string>
    <string name="connect_denied_title">BLE connect permission denied</string>
    <string name="connect_denied_message">As BLE connection permission has not been granted, this app cannot scan for Bluetooth LE devices.</string>

    <string name="pairing_request">PAIRING requested\n-> Perform pairing steps. Connect again</string>
    <string name="terminal_help">Help</string>
    <string name="terminal_temps">Temps</string>
    <string name="terminal_log">T Log</string>
    <string name="monitor_temperature">Monitor Temperature</string>
    <string name="graph_history">Graph History</string>
    <string name="tank_1">Tank 1</string>
    <string name="tank_2">Tank 2</string>
    <string name="tank_3">Tank 3</string>
    <string name="tank_4">Tank 4</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="blank_number">---</string>

</resources>
